--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 class="title">Hello World</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae et,
       blanditiis beatae voluptatibus veritatis odit consequatur ipsam impedit
