--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
       blanditiis beatae voluptatibus veritatis odit consequatur ipsam impedit
       nemo dolorem!
     </p>
-    <div>
-      <h1>hello</h1>
+    <div class="box">
+      <h1 style="color: red; text-align: center; border: 1px solid black">
+        hello
+      </h1>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
         repudiandae!
       </p>
-      <img
-        src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg"
-        alt=""
-      />
+      <img src="" alt="" />
     </div>
     <script src="index.js"></script>
   </body>
