--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="title">Hello World</h1>
-    <p>
+    <p style="text-align: justify">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae et,
       blanditiis beatae voluptatibus veritatis odit consequatur ipsam impedit
       nemo dolorem!
