--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Hello!</title>
   </head>
   <body>
-    <h1 class="title">Hello World</h1>
-    <p id="content" style="text-align: justify">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae et,
-      blanditiis beatae voluptatibus veritatis odit consequatur ipsam impedit
-      nemo dolorem!
-    </p>
+    <!--* unordered list -->
+    <ul>
+      <li>One Item</li>
+      <li>Another Item</li>
+      <li>Yet Another Item</li>
+    </ul>
 
-    <script src="index.js"></script>
-    <script src="index1.js"></script>
+    <!--* ordered list -->
+    <ol>
+      <!--* list item  -->
+      <li>First Item</li>
+      <li>Second Item</li>
+      <li>Third Item</li>
+    </ol>
+    <!--* image  -->
+    <img src="./picture/1.jpeg" alt="world" width="300px" />
+    <a href="http://google.com"></a>
   </body>
 </html>
