--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </ol>
     <!--* image  -->
     <img src="./picture/1.jpeg" alt="world" width="300px" />
-    <a href="http://google.com"></a>
+    <a href="http://google.com">Click Here</a>
+    
   </body>
 </html>
