--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
     <!--* image  -->
     <img src="./picture/1.jpeg" alt="world" width="300px" />
     <a href="http://google.com">Click Here</a>
-    
+
+    <hr />
+    <form>
+      <input type="text" placeholder="enter text..." name="name" />
+      <input type="submit" />
+    </form>
+    <hr />
+    <table>
+      <thead>
+        <tr>
+          <th>Ocean</th>
+          <th>Avarage Depth</th>
+          <th>Maximum Depth</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!--* table row  -->
+        <tr>
+          <!--* table data  -->
+          <td>Pasific Ocean</td>
+          <td>4.230 m</td>
+          <td>10.21 m</td>
+        </tr>
+        <tr>
+          <td>Atlantic Ocean</td>
+          <td>2.3 m</td>
+          <td>8.3 m</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
