--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <title>Hello!</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>HELLO WORLD</h1>
+    <p style="color: springgreen; text-align: center">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae et
+      fugit dolorum nihil distinctio expedita odio! Voluptates molestias beatae
+      corrupti.
+    </p>
     <!--* unordered list -->
     <ul>
       <li>One Item</li>
